--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@tabler/icons-react": "^3.3.0",
+    "framer-motion": "^11.1.7",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.3.0"
+    "react-hook-form": "^7.51.4",
+    "tailwind-merge": "^2.3.0",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "@types/node": "^20",
