--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@tabler/icons-react": "^3.3.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
     "react": "^18",
