--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@tabler/icons-react": "^3.3.0",
+    "@vercel/speed-insights": "^1.0.10",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "react-type-animation": "^3.2.0",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.6"
   },
