--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "zod": "^3.23.6"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^20",
     "@types/react": "^18",
