--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/speed-insights": "^1.0.10",
     "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
@@ -32,7 +33,7 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.14",
+    "prettier-plugin-tailwindcss": "^0.6.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
