--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-type-animation": "^3.2.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.6"
   },
